# pelican_lesscpy

./: Pipfile  README.rst  pyproject.toml  setup.cfg
pelican_lesscpy/: __init__.py
