[metadata]
name=pelican-lesscpy
version=0.1.0
description=Basic plugin to use lesscpy to generate and compress CSS stylesheets for Pelican
author=Jonathan Robey
author-email=class4kayaker@gmail.com
license='MIT'
long_description=file: README.rst
long_description_content_type='rst'
url='https://github.com/class4kayaker/pelican_lesscpy'
classifiers=
    Development Status :: 4 - Beta,
    Framework :: Pelican :: Plugins,
    No Upload

[options]
zip_safe=True
include_package_data=True
packages=find:
install_requires=
    pelican
    lesscpy

[options.packages.find]
exclude=
    tests

[bdist_wheel]
